# prsage

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  EXAMPLES.md  README.md  pyproject.toml  railway.toml
app/: config.py  db.py  logging_config.py  main.py  models.py
app/github/: auth.py  client.py  types.py
app/llm/: groq_client.py
app/review/: diff.py  fetcher.py  output.py  prompts.py  reviewer.py  runner.py
app/webhooks/: github.py  signature.py
landing/: index.html  styles.css  vercel.json
scripts/: DEPLOY.md  bootstrap_github_app.md
tests/: conftest.py  test_auth.py  test_diff.py  test_health.py  test_reviewer.py  test_signature.py  test_webhook.py
tests/fixtures/: sample_patch.diff
